# llm-text-classification-benchmark

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/raw/rotten_tomatoes/test/: cache-7412fd3773d4edfe.arrow
data/raw/rotten_tomatoes/train/: cache-78a07abb9dbb489e.arrow  dataset_info.json
data/raw/rotten_tomatoes/validation/: cache-dcb4326dd1998c94.arrow
notebooks/: 01_eda_rotten_tomatoes.ipynb  02_baseline_models.ipynb  03_transformer_models.ipynb
reports/results/: benchmark_results.csv  benchmark_results_final.csv
src/: baselines.py  data_loader.py  evaluation.py
src/models/: bow.py  hf_pipeline_classifier.py  tfidf_lr.py  tfidf_svm.py
