[project]
name = "llm-text-classification-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
